<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="app_description">Android Movie Player inspired by the UI of Softwinner FirePlayer</string>
    <string name="menu_exit">Exit</string>
    <string name="menu_tile">Tile</string>
    <string name="menu_stack">Stack</string>
    <string name="menu_app_mode">App mode config</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_sort">Sort</string>
    <string name="menu_sort_by_size">Sort by Size</string>
    <string name="menu_sort_alpha">Sort by Name</string>
    <string name="menu_search">search</string>
    <string name="menu_update">Check software update</string>
    <string name="menu_clearplayedlist">Clear watch history</string>
    <string name="menu_clear_search_history">Clear search history</string>
    <string name="menu_clear_favorite">Clear favorite record</string>
    <string name="menu_athumb">Disable animate preview</string>
    <string name="menu_dis_presentation">Disable Presentation Display</string>
    <string name="menu_vfloatwin">Open float window by default</string>
    <string name="media_scanning">media scanning …</string>
    <string name="str_media_mounted">Media device mounted</string>
    <string name="str_media_unmounted">Media device unmounted</string>
    <string name="str_icon">Icon</string>
    <string name="str_title">Title</string>
    <string name="str_description">Description</string>
    <string name="window_icon">Window icon</string>
    <string name="hide">Hide</string>
    <string name="close">Close</string>
    <string name="corner">Corner</string>
    <string name="common_ok">OK</string>
    <string name="subtitle_switch">Display subtitle</string>
    <string name="select_subtitle">Select subtitle</string>
    <string name="subtitle_delay">Adjust subtitle</string>
    <string name="subtitle_charset">Subtitle coding</string>
    <string name="subtitle_size">Subtitle size</string>
    <string name="subtitle_color">Subtitle color</string>
    <string name="no_subtitle">No subtitle</string>
    <string name="tab_repeat">Repeat Mode</string>
    <string name="tab_subtitle">Subtitle</string>
    <string name="tab_track">Track</string>
    <string name="tab_3d">3D Mode</string>
    <string name="volume">Volume</string>
    <string name="brightness">Brightness</string>
    <string name="appwidget_title">Video Player Recent Play</string>
    <string name="appwidget_empty_text">No rencent played videos</string>
    <string name="allvideos">All Videos</string>
    <string name="recordvideos">Recorded Videos</string>
    <string name="rencentvideos">Recent Played</string>
    <string name="favoritevideos">My Favorite</string>
    <string name="str_dont_hint">don\'t prompt again</string>
    <string name="update_sure">update</string>
    <string name="update_cancel">cancel</string>
    <string name="update_title">update tips</string>
    <string name="update_download_finish">update completely, click start install</string>
    <string name="update_download_ui">%s is update...</string>
    <string name="update_check_message">checking update...</string>
    <string name="update_check_no_new_version_message">no new version founded</string>
    <string name="update_check_error_message">update failed, please check network</string>
    <string name="mediainfo_dialog_title">Media Information</string>
    <string name="mediainfo_title">Title</string>
    <string name="mediainfo_storage_loc">location</string>
    <string name="mediainfo_size">Size</string>
    <string name="mediainfo_duration">Duration</string>
    <string name="mediainfo_width">Width</string>
    <string name="mediainfo_height">Height</string>
    <string name="str_ok">OK</string>
    <string name="str_latest_version">You have the latest version!</string>
    <string name="str_no_internet">Internet not available !</string>
    <string name="str_updating">Checking for updates ...</string>
    <string name="search_hint">Search Movies</string>
    <string name="str_no_search_media">no movie founded</string>
    <string name="str_no_media">no movie</string>
    <string name="str_delete">delete</string>
    <string name="str_delete_fail">delete fail</string>
    <string name="str_low_diskspace">Disk space is too low, we recommend that you clean up disk space (&gt;%dM) to get the best user experience!</string>
    <string name="added_to_favorite">Added to favorites</string>
    <string name="set_3dmode_fail">set 3D mode fail</string>
    <string name="VideoView_error_system_busy">system busy, please wait a moment!</string>
    <string name="notice_download">downloading, You can view the download progress at notification bar.</string>
    <string name="str_upgrade_fail_file_corruption">upgrade fail, downloaded file is corrupted.</string>
    <string name="demo_mode_switch">Enable Demo Mode:</string>
    <string name="video_coding_format">Video Coding Format:</string>
    <string name="video_size">Video Size:</string>
    <string name="video_frame_rate">Video Frame Rate:</string>
    <string name="video_bit_rate">Video Bit Rate:</string>
    <string name="full_video_size">Full Video Size</string>
    <string name="full_screen_size">Full Screen Size</string>
    <string name="origin_video_size">Original Size</string>
    <string name="VideoView_error_not_support">Sorry, the player encounters an error, please refresh playlists!</string>
    <string name="menu_about">About</string>
    <string name="about_description">VideoPlayer is an Android Movie Player inspired by the UI of Softwinner FirePlayer.</string>
    <string name="github_link">https://github.com/placeholder/VideoPlayer</string>
    <string name="menu_sort_date">Sort by Date</string>
    <string name="menu_sort_asc">Ascending</string>
</resources>
