<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/content" android:background="#ff000000" android:layout_width="200dp" android:layout_height="200dp">
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@+id/titlebar" android:background="#ff000000" android:padding="4dp" android:layout_width="match_parent" android:layout_height="40dp" android:layout_alignParentTop="true">
        <ImageView android:id="@+id/window_icon" android:layout_width="32dp" android:layout_height="32dp" android:contentDescription="@string/window_icon"/>
        <TextView android:textSize="20sp" android:id="@+id/title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="4dp" android:text="@string/str_title" android:maxLines="1" android:layout_weight="1"/>
        <ImageView android:id="@+id/hide" android:background="@drawable/hide" android:layout_width="32dp" android:layout_height="32dp" android:contentDescription="@string/hide"/>
        <ImageView android:id="@+id/close" android:background="@drawable/close_m" android:layout_width="32dp" android:layout_height="32dp" android:contentDescription="@string/close"/>
    </LinearLayout>
    <FrameLayout android:id="@+id/body" android:background="#ff000000" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_below="@+id/titlebar"/>
    <ImageView android:id="@+id/corner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/corner" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:contentDescription="@string/corner"/>
</RelativeLayout>
