<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:id="@+id/media_detail" android:layout_width="match_parent" android:layout_height="match_parent">
    <TableLayout android:id="@+id/table_layout_media_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:stretchColumns="1" android:collapseColumns="2">
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="20dp" android:layout_width="120dp" android:layout_height="wrap_content" android:text="@string/mediainfo_title"/>
            <TextView android:textSize="20dp" android:id="@+id/mediainfo_title" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="20dp" android:layout_width="120dp" android:layout_height="wrap_content" android:text="@string/mediainfo_storage_loc"/>
            <TextView android:textSize="20dp" android:id="@+id/mediainfo_pos" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mediainfo_size"/>
            <TextView android:textSize="20dp" android:id="@+id/mediainfo_size" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mediainfo_duration"/>
            <TextView android:textSize="20dp" android:id="@+id/mediainfo_duration" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mediainfo_width"/>
            <TextView android:textSize="20dp" android:id="@+id/mediainfo_width" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </TableRow>
        <TableRow android:layout_width="wrap_content" android:layout_height="wrap_content">
            <TextView android:textSize="20dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mediainfo_height"/>
            <TextView android:textSize="20dp" android:id="@+id/mediainfo_height" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
        </TableRow>
    </TableLayout>
</LinearLayout>
